[gd_scene load_steps=5 format=3 uid="uid://bswq83frl8imi"]

[ext_resource type="Script" path="res://main.gd" id="1_6bcuf"]
[ext_resource type="PackedScene" uid="uid://bpuv23l7ugco" path="res://hud.tscn" id="2_dw5fr"]
[ext_resource type="PackedScene" uid="uid://bfjh6bn4m6uke" path="res://score.tscn" id="2_f0bxj"]
[ext_resource type="PackedScene" uid="uid://n386jdcbvm5m" path="res://controls.tscn" id="2_lqhmh"]

[node name="Main" type="Node"]
script = ExtResource("1_6bcuf")

[node name="Score" parent="." instance=ExtResource("2_f0bxj")]

[node name="Controls" parent="." instance=ExtResource("2_lqhmh")]

[node name="HUD" parent="." instance=ExtResource("2_dw5fr")]

[connection signal="next" from="Score" to="." method="_on_score_next"]
[connection signal="reset" from="Score" to="." method="_on_score_reset"]
[connection signal="ended" from="Controls" to="." method="_on_controls_ended"]
[connection signal="init" from="HUD" to="." method="_on_hud_init"]
